# py_auto_test

./: .gitignore  .pylintrc  LICENSE.txt  README.md  png_diff.py  py_auto_test.asta  pyproject.toml  test.py  test_run.sh  text_diff.py
src/: image_comp.py  image_crop.py  main.py  test_reader.py  test_runner.py
tests/calc/: readme.txt  scenario.yml
tests/calc/sequences/: boot.yml  operation_addition.yml  shutdown.yml
tests/chrome/: readme.txt  scenario.yml
tests/chrome/sequences/: boot.yml  oss_access.yml  shutdown.yml
tests/ie/: readme.txt  scenario.yml
tests/ie/sequences/: boot.yml  oss_access.yml  shutdown.yml
tests/notepad/: scenario.yml
tests/notepad/sequences/: boot.yml  shutdown.yml  write_memo.yml
tools/: readme.md
