[tool.poetry]
name = "py-auto-test"
version = "0.1.0"
description = ""
authors = ["Kazunori OYA <terje@oya3.net>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
appium-python-client = "1.3.0"
urllib3 = "1.26.18"
pyyaml = "^6.0.1"
opencv-python = "^4.10.0.82"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
jedi = "^0.19.1"
flake8 = "^7.0.0"
importmagic = "^0.1.7"
autopep8 = "^2.1.1"
yapf = "^0.40.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
